@@ -1,3 +1,4 @@
+* FEA#14763 Possibilité de découper le procecssus de signature électronique en deux étape
 * BUG#12132 Le champ cryptolog_data n'est pas correctement encodé
 * BUG#8586 Correctif des données envoyées a universign concernant les informations du signataire
 - FEA#6685 support de url-success, url-fail et url-cancel dans la configuration pour gérer les retours d'Universign
